# tinyfoo

./: .gitignore  CMakeLists.txt  README.md  lbs.py  resource.h  settings.manifest  tinyfoo.aps  tinyfoo.rc  tinyfoo.sln  tinyfoo.vcxproj  tinyfoo.vcxproj.filters
api/: example.c  example.cpp  tinyfoo.h
include/: alloc.hpp  app.hpp  audio.hpp  audio_base.hpp  audio_sdl2_mixer.hpp  break.hpp  conf.hpp  control.hpp  image.hpp  imgui_styles.hpp  json_util.hpp  log.hpp  map.hpp  mem.hpp  music.hpp  new.hpp  playlist.hpp  rect.hpp  ren.hpp  res.hpp  rng.hpp  set.hpp  stl.hpp  str.hpp  str_view.hpp  ui.hpp  unreachable.hpp  unused.hpp  upng.hpp  util.hpp  vec.hpp
liblbs/: __init__.py  liblbs.py
src/: app.cpp  audio_base.cpp  audio_bass.cpp  audio_fmod.cpp  audio_sdl2_mixer.cpp  audio_soloud.cpp  audio_vlc.cpp  control.cpp  image.cpp  log.cpp  main.cpp  mem.cpp  playlist.cpp  ren.cpp  ren_base.cpp  ren_direct3d9.cpp  ren_opengl2.cpp  ren_opengl3.cpp  ren_sdl3.cpp  res.cpp  ui_imgui.cpp  upng.cpp
